--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,9 @@
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
+                        "allowedCommonJsDependencies": [
+                            "ts-interface-checker"
+                        ],
                         "assets": [
                           "src/assets",
                           "src/manifest.webmanifest",
