--- a/angular.json
+++ b/angular.json
@@ -76,12 +76,10 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                            "browserTarget": "frontend-hideyoshi.com:build:production",
-                            "proxyConfig": "src/proxy.conf.json"
+                            "browserTarget": "frontend-hideyoshi.com:build:production"
                         },
                         "development": {
-                            "browserTarget": "frontend-hideyoshi.com:build:development",
-                            "proxyConfig": "src/proxy.conf.json"
+                            "browserTarget": "frontend-hideyoshi.com:build:development"
                         }
                     },
                     "defaultConfiguration": "development"
