--- a/angular.json
+++ b/angular.json
@@ -11,8 +11,11 @@
             "prefix": "app",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
+                    "builder": "@angular-builders/custom-webpack:browser",
                     "options": {
+                        "customWebpackConfig": {
+                            "path": "src/webpack.config.ts"
+                        },
                         "outputPath": "dist/frontend-hideyoshi.com",
                         "index": "src/index.html",
                         "main": "src/main.ts",
@@ -73,7 +76,10 @@
                     "defaultConfiguration": "production"
                 },
                 "serve": {
-                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "builder": "@angular-builders/custom-webpack:dev-server",
+                    "options": {
+                        "browserTarget": "frontend-hideyoshi.com:build:build"
+                    },
                     "configurations": {
                         "production": {
                             "browserTarget": "frontend-hideyoshi.com:build:production",
