Adds Local Profile Pictures Implementation

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "@fortawesome/free-brands-svg-icons": "^6.1.1",
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
-        "bootstrap": "^4.6.1",
+        "bootstrap": "^4.6.2",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "jquery": "^3.6.0",
@@ -41,12 +41,12 @@
     "devDependencies": {
         "@angular-builders/custom-webpack": "^14.1.0",
         "@angular-devkit/build-angular": "^14.0.3",
-        "@angular-eslint/builder": "14.0.0",
+        "@angular-eslint/builder": "^14.4.0",
         "@angular-eslint/eslint-plugin": "14.0.0",
         "@angular-eslint/eslint-plugin-template": "14.0.0",
         "@angular-eslint/schematics": "14.0.0",
         "@angular-eslint/template-parser": "14.0.0",
-        "@angular/cli": "~14.0.3",
+        "@angular/cli": "^14.2.12",
         "@angular/compiler-cli": "^14.0.0",
         "@types/jasmine": "~4.0.0",
         "@types/node": "^18.11.19",
