--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "bootstrap": "^4.6.2",
+    "cookieconsent": "^3.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jquery": "^3.6.0",
+    "ngx-cookie-service": "^16.0.1",
+    "ngx-cookieconsent": "^4.0.2",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
     "ts-interface-checker": "^1.0.2",
