--- a/package.json
+++ b/package.json
@@ -1,70 +1,74 @@
 {
-  "name": "frontend-hideyoshi.com",
-  "version": "0.0.0",
-  "scripts": {
-    "start": "node ./server.js",
-    "build": "ng build",
-    "serve": "ng serve",
-    "serve:prod": "ng serve --configuration=production",
-    "build:prod": "ng build --configuration=production"
-  },
-  "proxy": {
-    "/callback": {
-      "target": "http://localhost:8070"
+    "name": "frontend-hideyoshi.com",
+    "version": "0.0.0",
+    "scripts": {
+        "start": "node ./server.js",
+        "build": "ng build",
+        "serve": "ng serve",
+        "serve:prod": "ng serve --configuration=production",
+        "build:prod": "ng build --configuration=production"
+    },
+    "proxy": {
+        "/callback": {
+            "target": "http://localhost:8070"
+        }
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^16.2.2",
+        "@angular/cdk": "^16.2.1",
+        "@angular/common": "^16.2.2",
+        "@angular/compiler": "^16.2.2",
+        "@angular/core": "^16.2.2",
+        "@angular/forms": "^16.2.2",
+        "@angular/material": "^16.2.1",
+        "@angular/platform-browser": "^16.2.2",
+        "@angular/platform-browser-dynamic": "^16.2.2",
+        "@angular/router": "^16.2.2",
+        "@angular/service-worker": "^16.2.2",
+        "@fortawesome/angular-fontawesome": "^0.13.0",
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-brands-svg-icons": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "bootstrap": "^4.6.2",
+        "cookieconsent": "^3.1.1",
+        "cors": "^2.8.5",
+        "express": "^4.18.1",
+        "jquery": "^3.6.0",
+        "ngx-cookie-service": "^16.0.1",
+        "ngx-cookieconsent": "^4.0.2",
+        "normalize.css": "^8.0.1",
+        "rxjs": "~7.5.0",
+        "ts-interface-checker": "^1.0.2",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.13.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^16.2.0",
+        "@angular-eslint/builder": "^16.1.1",
+        "@angular-eslint/eslint-plugin": "16.1.1",
+        "@angular-eslint/eslint-plugin-template": "16.1.1",
+        "@angular-eslint/schematics": "16.1.1",
+        "@angular-eslint/template-parser": "16.1.1",
+        "@angular/cli": "^16.2.0",
+        "@angular/compiler-cli": "^16.2.2",
+        "@types/jasmine": "~4.0.0",
+        "@types/node": "^18.11.19",
+        "@typescript-eslint/eslint-plugin": "^5.59.2",
+        "@typescript-eslint/parser": "^5.59.2",
+        "eslint": "^8.39.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "jasmine-core": "~4.1.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "prettier": "^3.0.3",
+        "prettier-eslint": "^16.1.1",
+        "ts-interface-builder": "^0.3.3",
+        "typescript": "~4.9.5"
     }
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^16.2.2",
-    "@angular/cdk": "^16.2.1",
-    "@angular/common": "^16.2.2",
-    "@angular/compiler": "^16.2.2",
-    "@angular/core": "^16.2.2",
-    "@angular/forms": "^16.2.2",
-    "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^16.2.2",
-    "@angular/platform-browser-dynamic": "^16.2.2",
-    "@angular/router": "^16.2.2",
-    "@angular/service-worker": "^16.2.2",
-    "@fortawesome/angular-fontawesome": "^0.13.0",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "bootstrap": "^4.6.2",
-    "cookieconsent": "^3.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "jquery": "^3.6.0",
-    "ngx-cookie-service": "^16.0.1",
-    "ngx-cookieconsent": "^4.0.2",
-    "normalize.css": "^8.0.1",
-    "rxjs": "~7.5.0",
-    "ts-interface-checker": "^1.0.2",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular-eslint/builder": "^16.1.1",
-    "@angular-eslint/eslint-plugin": "16.1.1",
-    "@angular-eslint/eslint-plugin-template": "16.1.1",
-    "@angular-eslint/schematics": "16.1.1",
-    "@angular-eslint/template-parser": "16.1.1",
-    "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "^16.2.2",
-    "@types/jasmine": "~4.0.0",
-    "@types/node": "^18.11.19",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "ts-interface-builder": "^0.3.3",
-    "typescript": "~4.9.5"
-  }
 }
