Adds Deployment Dispatcher

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,3 +40,15 @@ jobs:
               with:
                   push: true
                   tags: yoshiunfriendly/frontend-hideyoshi.com:latest
+
+    run-dispatcher:
+        needs: docker
+        runs-on: ubuntu-latest
+        steps:
+            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+            - name: Runs Infra-Hideyoshi.com Deployment Dispatcher
+              run: |
+                  curl -X POST https://api.github.com/repos/HideyoshiNakazone/infra-hideyoshi.com/dispatches \
+                  -H 'Accept: application/vnd.github.everest-preview+json' \
+                  -u ${{ secrets.ACTIONS_KEY }} \
+                  --data '{"event_type": "refresh-deployments", "client_payload": { "deployments": "frontend-deployment" }}'
