--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "bootstrap": "^4.6.2",
         "cookieconsent": "^3.1.1",
         "cors": "^2.8.5",
+        "envsub": "^4.1.0",
         "express": "^4.18.1",
         "jquery": "^3.6.0",
         "ngx-cookie-service": "^16.0.1",
