--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@fortawesome/free-brands-svg-icons": "^6.1.1",
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@glidejs/glide": "^3.6.0",
         "bootstrap": "^4.6.2",
         "cookieconsent": "^3.1.1",
         "cors": "^2.8.5",
@@ -40,6 +41,7 @@
         "jquery": "^3.6.0",
         "ngx-cookie-service": "^16.0.1",
         "ngx-cookieconsent": "^4.0.2",
+        "ngx-glide": "^16.0.0",
         "normalize.css": "^8.0.1",
         "rxjs": "~7.5.0",
         "ts-interface-checker": "^1.0.2",
