--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@glidejs/glide": "^3.6.0",
+        "apexcharts": "^3.45.1",
         "bootstrap": "^4.6.2",
         "cookieconsent": "^3.1.1",
         "cors": "^2.8.5",
         "envsub": "^4.1.0",
         "express": "^4.18.1",
         "jquery": "^3.6.0",
+        "ng-apexcharts": "^1.8.0",
         "ngx-cookie-service": "^16.0.1",
         "ngx-cookieconsent": "^4.0.2",
         "ngx-glide": "^16.0.0",
