--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@glidejs/glide": "^3.6.0",
+        "@sinclair/typebox": "^0.32.4",
         "apexcharts": "^3.45.1",
         "bootstrap": "^4.6.2",
         "cookieconsent": "^3.1.1",
