--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.14",
-    "@angular/cdk": "^16.2.1",
-    "@angular/common": "^18.2.14",
-    "@angular/compiler": "^18.2.14",
-    "@angular/core": "^18.2.14",
-    "@angular/forms": "^18.2.14",
-    "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^18.2.14",
-    "@angular/platform-browser-dynamic": "^18.2.14",
-    "@angular/router": "^18.2.14",
-    "@angular/service-worker": "^18.2.14",
+    "@angular/animations": "^20.3.9",
+    "@angular/cdk": "^19.2.19",
+    "@angular/common": "^20.3.9",
+    "@angular/compiler": "^20.3.9",
+    "@angular/core": "^20.3.9",
+    "@angular/forms": "^20.3.9",
+    "@angular/material": "^19.2.19",
+    "@angular/platform-browser": "^20.3.9",
+    "@angular/platform-browser-dynamic": "^20.3.9",
+    "@angular/router": "^20.3.9",
+    "@angular/service-worker": "^20.3.9",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
@@ -38,6 +38,7 @@
     "bootstrap": "^4.6.2",
     "cookieconsent": "^3.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "envsub": "^4.1.0",
     "express": "^4.18.1",
     "jquery": "^3.6.0",
@@ -49,19 +50,19 @@
     "rxjs": "~7.5.0",
     "ts-interface-checker": "^1.0.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.21",
-    "@angular-eslint/builder": "^16.1.1",
-    "@angular-eslint/eslint-plugin": "16.1.1",
-    "@angular-eslint/eslint-plugin-template": "16.1.1",
+    "@angular-eslint/builder": "^19.8.1",
+    "@angular-eslint/eslint-plugin": "^19.8.1",
+    "@angular-eslint/eslint-plugin-template": "^19.8.1",
     "@angular-eslint/schematics": "^20.5.0",
-    "@angular-eslint/template-parser": "16.1.1",
-    "@angular/cli": "^18.2.21",
-    "@angular/compiler-cli": "^18.2.14",
+    "@angular-eslint/template-parser": "^19.8.1",
+    "@angular/build": "^20.3.8",
+    "@angular/cli": "^20.3.8",
+    "@angular/compiler-cli": "^20.3.9",
     "@types/jasmine": "~4.0.0",
-    "@types/node": "^18.11.19",
+    "@types/node": "^22.18.13",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
@@ -76,6 +77,6 @@
     "prettier": "^3.0.3",
     "prettier-eslint": "^16.1.1",
     "ts-interface-builder": "^0.3.3",
-    "typescript": "~5.4.5"
+    "typescript": "~5.8.3"
   }
 }
