--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,7 +28,7 @@ jobs:
         if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
         env:
           IMAGE_TAG: ${{ github.ref_name == 'main' && 'latest' || 'dev' }}
-          IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/frontend-hideyoshi.com:latest
+          IMAGE_NAME: ghcr.io/${{ toLower(github.repository_owner) }}/frontend-hideyoshi.com:latest
         permissions:
           contents: read
           packages: write   # required to push to ghcr.io
