feat: fixes docker build

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -55,11 +55,11 @@ jobs:
                 
                 SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
                 
-                echo "IMAGE_BASE=ghcr.io/${OWNER}/${REPO}" >> $GITHUB_ENV
+                echo "PROJECT_IMAGE_NAME=ghcr.io/${OWNER}/${REPO}" >> $GITHUB_ENV
                 echo "TAG=$TAG" >> $GITHUB_ENV
                 echo "SHORT_SHA=$SHORT_SHA" >> $GITHUB_ENV
-                echo "IMAGE_LATEST=${IMAGE_BASE}:${TAG}" >> $GITHUB_ENV
-                echo "IMAGE_SHA=${IMAGE_BASE}:sha-${SHORT_SHA}" >> $GITHUB_ENV
+                echo "IMAGE_LATEST=${PROJECT_IMAGE_NAME}:${TAG}" >> $GITHUB_ENV
+                echo "IMAGE_SHA=${PROJECT_IMAGE_NAME}:sha-${SHORT_SHA}" >> $GITHUB_ENV
 
             - name: Build Docker image
               run: |
