feat: fixes docker build

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,6 +32,8 @@ jobs:
           id-token: write   # optional for OIDC if you use it
 
         steps:
+            - uses: actions/checkout@v3
+
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v1
 
