--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,7 +80,7 @@ jobs:
     deploy:
         needs: [docker]
         runs-on: ubuntu-latest
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/main')
+        environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
 
         steps:
           - uses: actions/checkout@v4
