--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sinclair/typebox": "^0.32.4",
     "apexcharts": "^3.45.1",
     "bootstrap": "^4.6.2",
+    "compression": "^1.8.1",
     "cookieconsent": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
