hotfix: fixes images for arm64

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,10 @@ jobs:
             - uses: actions/checkout@v3
 
             - name: Set up QEMU
-              uses: docker/setup-qemu-action@v1
+              uses: docker/setup-qemu-action@v3
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
 
             - name: Log in to GHCR
               uses: docker/login-action@v3
@@ -73,6 +76,7 @@ jobs:
               with:
                 context: .
                 push: true
+                platforms: linux/amd64,linux/arm64
                 tags: |
                   ${{ env.IMAGE_LATEST }}
                   ${{ env.IMAGE_SHA }}
