fix: fixes ingress cert

--- a/.k8s/ingress.yaml
+++ b/.k8s/ingress.yaml
@@ -2,8 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   namespace: ${KUBE_NAMESPACE}
-  name: nginx-ingress
+  name: frontend-ingress
   annotations:
+    cert-manager.io/cluster-issuer: cluster-certificate-issuer
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /
